# nuitbiencommun

./: ANNOTATIONS.md  Makefile  README.md  environment.yaml  linter.sh  pyproject.toml  setup.cfg  setup.py
configs/: detect_and_save_panels.yaml  detect_and_save_results_folder.yaml  fasterrcnn_predictor.yaml  fasterrcnn_trainer.yaml  ocr_detection_on_panels.yaml  run_on_one_image.yaml  segmentation_predictor.yaml  segmentation_trainer.yaml
doc/: conf.py  cvat.rst  extract_frames.rst  index.rst  rough_detection_craft.rst  rough_detection_faster_rcnn.rst
docs/: ANNOTATIONS.md  DATA-PREPARATION.md  Makefile  conf.py  index.rst  make.bat
src/: evaluate_utils.py  utils.py
src/data/: aggregate_annotations.py  detection_dataloader.py  parse_cvat_annotations.py  segmentation_dataloader.py
src/engine/: compute_metrics.py  fasterrcnn_module.py  panel_detector.py  segmentation_module.py
src/image_processing/: normalize_image.py
src/tools/: create_mask_image_from_polygons.py  symlink_annotated_data.py
src/visualization/: show_annotations.py
tools/annotations/: aggregate_annotations.py  edit_fasterrcnn_detections.py  parse_cvat_annotations.py
tools/data/: check_bboxes_aspect_ratio.py  create_bboxes_from_polygons.py  create_mask_image_from_polygons.py  symlink_annotated_data.py
tools/detection/: detect_and_save_panels.py  detect_and_save_results_folder.py  fasterrcnn_predictor.py  fasterrcnn_trainer.py
tools/ocr/: detect_numbers.py
tools/segmentation/: segmentation_predictor.py  segmentation_trainer.py
